--- a/web_app/templates/web_app/view_people.html
+++ b/web_app/templates/web_app/view_people.html
@@ -1,7 +1,53 @@
-<html>
+{% extends 'web_app/layout.html' %}
 
-    <body>
-        <table>
+{% load static %}
+
+{% block title %}View People{% endblock %}
+
+{% block content %}
+
+<a class="btn btn-success btn-sm" href="/create_person">Add Person</a> 
+
+<div class="table-responsive">
+    <table class="table table-striped table-bordered mt-4">
+        <thead class="table-dark">
+            <tr>
+                <th style="width: 20%;">First Name</th>
+                <th style="width: 20%;">Last Name</th>
+                <th style="width: 25%;">Email</th>
+                <th style="width: 25%;">Company</th>
+                <th class="w-auto">Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for person in people %}
+            <tr class="align-items-center">
+                <td style="width: 20%;">
+                    {{person.first_name}}
+                </td>
+                <td style="width: 20%;">
+                    {{person.last_name}}
+                </td>
+                <td style="width: 25%;">
+                    {{person.email}}
+                </td>
+                <td style="width: 25%;">
+                    {{person.company}}
+                </td>
+                <td class="w-auto">
+                    <div class="d-flex gap-2 justify-content-end">
+                        <a class="btn btn-warning btn-sm" href="/edit_person/{{person.id}}">Edit</a>
+                        <a class="btn btn-danger btn-sm" href="/delete_person/{{person.id}}">Delete</a>
+                    </div>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+
+
+        <!-- <table>
             <tr>
                 <th>First Name</th>
                 <th>Last Name</th>
@@ -29,8 +75,6 @@
             {% endfor %}
             
         </table>
-        <a href="/create_person">Create</a>
+        <a href="/create_person">Create</a> -->
             
-    </body>
-
-</html>
+{% endblock %}
