--- a/web_app/templates/web_app/index.html
+++ b/web_app/templates/web_app/index.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}View Company{% endblock %}
+{% block title %}Home{% endblock %}
 
 {% block content %}
 <main>
