--- a/web_app/templates/web_app/view_companies.html
+++ b/web_app/templates/web_app/view_companies.html
@@ -12,21 +12,24 @@
     <table class="table table-striped table-bordered mt-4">
         <thead class="table-dark">
             <tr>
-                <th style="width: 70%;">Name</th>
-                <th style="width: 20%;">Industry</th> 
+                <th style="width: 60%;">Name</th>
+                <th style="width: 25%;">Industry</th> 
+                <th style="width: 20%;">Employees</th> 
                 <th class="w-auto">Actions</th>
             </tr>
         </thead>
         <tbody>
             {% for company in companies %}
+        
             <tr class="align-items-center">
-                <td style="width: 70%;">{{ company.name }}</td>
-                <td style="width: 20%;">{{ company.get_industry_display }}</td> 
+                <td style="width: 60%;">{{ company.0.name }}</td>
+                <td style="width: 25%;">{{ company.0.get_industry_display }}</td> 
+                <td style="width: 20%;">{{ company.1 }}</td> 
                 <td class="w-auto text-end">
                     <div class="d-flex gap-2 justify-content-end">
-                        <a class="btn btn-primary btn-sm" href="/view_company/{{company.id}}">View</a>
-                        <a class="btn btn-warning btn-sm" href="/edit_company/{{company.id}}">Edit</a>
-                        <a class="btn btn-danger btn-sm" href="/delete_company/{{company.id}}">Delete</a>
+                        <a class="btn btn-primary btn-sm" href="/view_company/{{company.0.id}}">View</a>
+                        <a class="btn btn-warning btn-sm" href="/edit_company/{{company.0.id}}">Edit</a>
+                        <a class="btn btn-danger btn-sm" href="/delete_company/{{company.0.id}}">Delete</a>
                     </div>
                 </td>
             </tr>
