--- a/web_app/templates/web_app/create_person.html
+++ b/web_app/templates/web_app/create_person.html
@@ -9,7 +9,7 @@
 
     <form action="" method="POST" class="p-4 border rounded shadow-sm">
         {% csrf_token %}
-        <h3>Person</h3>
+        <h3 style="margin-bottom: 10px;">Client</h3>
         <div class="mb-3">
             {{form}}
         </div>
