--- a/web_app/templates/web_app/view_companies.html
+++ b/web_app/templates/web_app/view_companies.html
@@ -14,7 +14,7 @@
             <tr>
                 <th style="width: 60%;">Name</th>
                 <th style="width: 25%;">Industry</th> 
-                <th style="width: 20%;">Employees</th> 
+                <th style="width: 20%;">Clients</th> 
                 <th class="w-auto">Actions</th>
             </tr>
         </thead>
