--- a/web_app/templates/web_app/view_company.html
+++ b/web_app/templates/web_app/view_company.html
@@ -62,7 +62,7 @@
 </div>
 
 <form action="" method="POST" class="p-4 border rounded shadow-sm">
-    <h3>Add Person</h1>
+    <h3>Add Client</h1>
     {% csrf_token %}
     <div class="mb-3">
         {{ link_person_to_company_form }}
