--- a/web_app/templates/web_app/view_people.html
+++ b/web_app/templates/web_app/view_people.html
@@ -2,11 +2,11 @@
 
 {% load static %}
 
-{% block title %}View People{% endblock %}
+{% block title %}View Clients{% endblock %}
 
 {% block content %}
 
-<a class="btn btn-success btn-sm" href="/create_person">Add Person</a> 
+<a class="btn btn-success btn-sm" href="/create_person">Add Client</a> 
 
 <div class="table-responsive">
     <table class="table table-striped table-bordered mt-4">
