--- a/web_app/templates/web_app/layout.html
+++ b/web_app/templates/web_app/layout.html
@@ -10,14 +10,13 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="{% url 'index' %}">Company & People</a>
+            <a class="navbar-brand" href="{% url 'index' %}">Companies & Clients</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'view_people' %}">View People</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'view_people' %}">View Clients</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'view_companies' %}">View Companies</a></li>
                 </ul>
             </div>
